<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_category_security">

        <SwitchPreferenceCompat
            app:key="encryption"
            app:title="@string/settings_encryption_toggle"
            app:summary="@string/settings_encryption_summary"
            app:defaultValue="false"
            />

        <EditTextPreference
            app:key="password"
            app:title="@string/settings_password"
            app:maxLines="1"
            app:dialogTitle="@string/settings_password_title"
            app:dialogMessage="@string/settings_password_description"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_server">

        <EditTextPreference
            app:key="port"
            app:title="@string/settings_port"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="2411"
            app:maxLines="1"
            app:dialogTitle="@string/settings_port_title"
            app:dialogMessage="@string/settings_port_description"
            android:inputType="number"
            />

    </PreferenceCategory>

</PreferenceScreen>